cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_check_odd_even 1_check_odd_even.cpp)
add_executable(2_detect_two_integer 2_detect_two_integer.cpp)
add_executable(03_add_1_to_int 03_add_1_to_int.cpp)
add_executable (04_swap_number 04_swap_number.cpp)
add_executable (05_count_bits_set 05_count_bits_set.cpp)
add_executable (06_turn_on_off_bits 06_turn_on_off_bits.cpp)

