cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)

add_executable (01_structures "01_structures.cpp")
add_executable (02_classes "02_classes.cpp")
add_executable (03_enumerations "03_enumerations.cpp")
add_executable (04_unions "04_unions.cpp")
add_executable (05_variant "05_variant.cpp")
