cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)

#add_executable (01_complex "01_complex.cpp" "container.h" "list_container.h" "vector.h")
add_executable (04_01_complex "01_complex.cpp")
add_executable (04_02_vector "02_vector.cpp" )
add_executable (04_03_vector_container "03_vector_container.cpp")
