cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)

add_executable (05_01_vector "01_vector.cpp")
add_executable (05_02_vector "02_vector.cpp")
add_executable (05_03_vector "03_vector.cpp")
add_executable (05_04_arguments "04_template_arguments.cpp")
add_executable (05_05_functions "05_function_template.cpp")


