cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 17)

add_executable (06_01_timer "01_timepoint.cpp")
add_executable (06_02_timer_add "02_timepoint_add.cpp")
add_executable (06_03_timepointAddition "03_timepointAddition.cpp")
add_executable (06_04_max_element "04_max_element.cpp")
add_executable (06_05_parsing_file "05_parsing_file.cpp")
add_executable (06_06_read_file_data "06_read_file_data.cpp")
add_executable (06_07_bits_rotate "07_bits_rotate.cpp")